--- a/package.json
+++ b/package.json
@@ -46,9 +46,9 @@
       "last 1 safari version"
     ]
   },
-  "engines": {
-  "node": ">=x.x.x"
-  }
+"engines": {
+  "node": ">=14.0.0"
+}
 }
 
 
